Edit margins of 'left-section' to ensure proper spacing while responsive

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -26,11 +26,25 @@
   display: flex;
   align-items: center;
 }
+
+
 .left-section{
   display: flex;
   align-items: center;
-
+  gap: 16px;
+  margin-right: 26px;
 }
+.logo {
+  width: 60px;
+  padding: 22px 0px;
+}
+.company-name {
+  font-weight: bold;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
 .count-text{
   margin-right: 10px;
 }
@@ -64,13 +78,3 @@
   display: none;
 }
 
-.logo{
-  width: 60px;
-  padding: 22px 0px;
-}
-.company-name{
-  font-weight: bold;
-  margin-left: 8px;
-  font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
